# ops-transformer

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  OAT.xml  README.md  SECURITY.md  Third_Party_Open_Source_Software_Notice  build.sh  build.sh.orig  install_deps.sh  requirements.txt  version.info
attention/: CMakeLists.txt
attention/nsa_selected_attention_grad/: CMakeLists.txt  README.md
attention/nsa_selected_attention_grad/basic_modules/: common_header.h  cube_op.h  vec_op.h
attention/nsa_selected_attention_grad/basic_modules/cube_modules/: cube1.h  cube2.h  cube3.h  cube4.h  cube5.h
attention/nsa_selected_attention_grad/docs/: aclnnNsaSelectedAttentionGrad.md
attention/nsa_selected_attention_grad/examples/: test_aclnn_nsa_selected_attention_grad.cpp
attention/nsa_selected_attention_grad/op_host/: CMakeLists.txt  nsa_selected_attention_grad_def.cpp  nsa_selected_attention_grad_infershape.cpp  nsa_selected_attention_grad_tiling.cpp  nsa_selected_attention_grad_tiling.h  nsa_selected_attention_grad_tiling_bs1.cpp  nsa_selected_attention_grad_tiling_bs1.h  nsa_selected_attention_grad_tiling_bs1_basic.cpp  nsa_selected_attention_grad_tiling_bs1_basic.h  nsa_selected_attention_grad_tiling_common.cpp  nsa_selected_attention_grad_tiling_common.h
attention/nsa_selected_attention_grad/op_host/op_api/: aclnn_nsa_selected_attention_grad.cpp  aclnn_nsa_selected_attention_grad.h  nsa_selected_attention_grad.cpp  nsa_selected_attention_grad.h
attention/nsa_selected_attention_grad/op_kernel/: nsa_selected_attention_grad.cpp  nsa_selected_attention_grad_bs1.h  nsa_selected_attention_grad_bs1_basic.h  nsa_selected_attention_grad_post.h
attention/nsa_selected_attention_grad/tests/: CMakeLists.txt
attention/nsa_selected_attention_grad/tests/comm/: nsag_case.cpp  nsag_case.h
attention/nsa_selected_attention_grad/tests/utest/: ts_nsag.h  ts_nsag_tc.cpp
common/src/tiling_sink/: CMakeLists.txt  device_op_impl_registry.cpp  tiling_sink_kernel.cpp
common/stub/op_api/: CMakeLists.txt  opapi_stub.cpp
common/stub/op_api/aclnn_kernels/: pad.h  reshape.h  transdata.h
common/stub/op_api/level0/: add.h  arange.h  axpy.h  batch_norm_backward.h  broadcast_to.h  dilation.h  div.h  dot.h  expand.h  fault_injection.h  fill.h  gather_elements.h  gather_v2.h  gather_v3.h  inplace_index_add.h  masked_scatter.h  maximum.h  minimum.h  mul.h  muls.h  ones_like.h  padv3.h  reduce_mean.h  reduce_sum_op.h  shape_op.h  sort.h  squeeze.h  sub.h  tensor_move.h  unsqueeze.h  zero_op.h
mc2/3rd/: CMakeLists.txt
mc2/3rd/add_rms_norm/op_host/: add_rms_norm_tiling.h
mc2/3rd/batch_mat_mul_v3/op_host/: CMakeLists.txt  batch_mat_mul_v3_def.cpp  batch_mat_mul_v3_infershape.cpp
mc2/3rd/batch_mat_mul_v3/op_kernel/: batch_mat_mul_nd2nz.h  batch_mat_mul_v3.cpp  batch_mat_mul_v3.h  batch_mat_mul_v3_block.h  batch_mat_mul_v3_com_base_block.h  batch_mat_mul_v3_com_base_block_struct.h
mc2/3rd/common/op_host/: CMakeLists.txt  math_util.h  matmul_common_infershape.cpp  matmul_common_infershape.h
mc2/3rd/mat_mul_v3/op_host/: CMakeLists.txt  mat_mul_v3_def.cpp  mat_mul_v3_infershape.cpp
mc2/3rd/mat_mul_v3/op_kernel/: mat_mul_base_block.h  mat_mul_base_kernel.h  mat_mul_cvp_base_kernel.h  mat_mul_deterministic_splitk_kernel.h  mat_mul_l1_full_load.h  mat_mul_multi_core_splitk_kernel.h  mat_mul_nd2nz.h  mat_mul_nd2nz_kernel.h  mat_mul_nd2nz_util.h  mat_mul_optimized_fixpipe_algorithm.h  mat_mul_sc_splitk_block.h  mat_mul_sc_splitk_kernel.h  mat_mul_sc_splitk_kernel_gm_to_l1.h  mat_mul_unaligned_base_kernel.h  mat_mul_unaligned_deterministic_splitk_kernel.h  mat_mul_unaligned_sc_splitk_kernel.h  mat_mul_unaligned_sc_splitk_kernel_gm_to_l1.h  mat_mul_v3.cpp  mat_mul_v3_common.h  mat_mul_v3_tiling_key.h
mc2/3rd/norm_common/op_kernel/: reduce_common.h
mc2/3rd/ops_legacy/op_api/: CMakeLists.txt  op_legacy_api.cpp
mc2/3rd/ops_legacy/op_tiling/: CMakeLists.txt  op_cache_def_tiling.h  op_cache_tiling.cpp  op_cache_tiling.h  runtime_kb_api.cpp  runtime_kb_api.h  tbe_tiling_api.cpp  tbe_tiling_api.h
mc2/3rd/quant_batch_matmul_v3/op_kernel/: quant_batch_matmul_v3.cpp  quant_batch_matmul_v3.h  quant_batch_matmul_v3_apt.cpp  quant_batch_matmul_v3_base.h  quant_batch_matmul_v3_bf16.h  quant_batch_matmul_v3_bf16_basic.h  quant_batch_matmul_v3_bf16_opt.h  quant_batch_matmul_v3_block.h  quant_batch_matmul_v3_cube_basic.h  quant_batch_matmul_v3_init_output.h  quant_batch_matmul_v3_pertoken.h  quant_batch_matmul_v3_pertoken_basic.h  quant_batch_matmul_v3_pertoken_opt.h  quant_batch_matmul_v3_tiling_data.h  quant_batch_matmul_v3_update.h
mc2/3rd/rms_norm/op_kernel/: rms_norm_base.h
mc2/3rd/weight_quant_batch_matmul_v2/op_kernel/: anti_quant.h  tool.h  weight_quant_batch_matmul_v2.cpp  weight_quant_batch_matmul_v2_common.h  weight_quant_batch_matmul_v2_constant.h  weight_quant_batch_matmul_v2_custom.h  weight_quant_batch_matmul_v2_custom_mix_splitk.h  weight_quant_batch_matmul_v2_custom_nz_splitk.h  weight_quant_batch_matmul_v2_custom_weight_nz.h  weight_quant_batch_matmul_v2_msd_group.h  weight_quant_batch_matmul_v2_msd_multicore.h  weight_quant_batch_matmul_v2_msd_split_k.h  weight_quant_batch_matmul_v2_weight_nz_performance.h  weight_quant_batch_matmul_v2_weight_nz_performance_base.h
mc2/all_gather_matmul/: CMakeLists.txt  README.md
mc2/all_gather_matmul/docs/: aclnnAllGatherMatmul.md
mc2/all_gather_matmul/examples/: test_aclnn_all_gather_matmul.cpp
mc2/all_gather_matmul/op_graph/: CMakeLists.txt  all_gather_matmul_gen_task.cpp  all_gather_matmul_proto.h  fallback_all_gather_matmul.cpp
mc2/all_gather_matmul/op_host/: CMakeLists.txt  all_gather_matmul_def.cpp  all_gather_matmul_infershape.cpp
mc2/all_gather_matmul/op_host/op_api/: aclnn_all_gather_matmul.cpp  aclnn_all_gather_matmul.h
mc2/all_gather_matmul/op_host/op_tiling/: all_gather_formulaic_tiling.cpp  all_gather_formulaic_tiling.h  all_gather_matmul_tiling.cpp
mc2/all_gather_matmul/op_kernel/: all_gather_matmul.cpp  all_gather_matmul_base.h  all_gather_matmul_full_mesh.h  all_gather_matmul_tiling.h  mc2_tiling_struct.h
(+2891 files in other folders)
